--- a/lab5_CLIP.ipynb
+++ b/lab5_CLIP.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cf051bca-a54f-4ff6-b657-08e38dfd34c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +24,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "03aa13e8-2b20-4700-9687-1a4954dc8860",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "faa18f7b-2fdf-4e06-b09a-9aa96aa76039",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9364289f-61d2-45ed-b048-df1ede85417f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8840927c-e2a4-4f1b-9737-78ccf17dc3b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +105,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "535ff573-c457-4d01-9900-3e46d8ab66de",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +122,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "9c3c58c9-4b36-4c28-a3d6-bacaad046efa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "f93e45db-87a3-49de-a980-5e272c6ec2ef",
    "metadata": {},
    "outputs": [
     {
@@ -166,15 +158,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acca4334-aa46-4a5b-a089-1df1c0157f31",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "correct_num = 0\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "for i in range(len(emotions)):\n",
+    "    img = images[i]\n",
+    "    txt = descriptions[i][:35]\n",
+    "    inputs = processor(text=[\"it's good\", \"it's bad\", \"that's the case\"], images=img, return_tensors=\"pt\", padding=True).to(device)\n",
+    "    outputs = model(**inputs)\n",
+    "    logits_per_image = outputs.logits_per_image \n",
+    "    probs = logits_per_image.softmax(dim=1) \n",
+    "    correct_num += int(np.argmax(probs.tolist())==emotions[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(correct_num/len(emotions))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -188,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
