--- a/lab5_txt_and_pic.ipynb
+++ b/lab5_txt_and_pic.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "645ca1c9-ce6a-4700-ba1d-d3264b67e08e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4d0d715a-7824-4930-a670-f30506a474b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8069cfdf-eda6-4e87-8969-1a6454c22290",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +63,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4ece494b-b7dd-46f3-b993-f3ef80a0c525",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ab4e7baa-f512-439e-b240-a6339ab9520c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +90,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8358b26a-83a7-449f-9c86-effed9ea1eab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +113,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cdb208cd-00c2-49fc-8f40-ee7c4f1120df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +124,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b554893e-fc62-4881-9e7f-4111362bc92c",
    "metadata": {},
    "source": [
     "### 尝试直接拼接"
@@ -140,7 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2a3c4c92-0ba9-450c-9bac-b7a0e6653a21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +162,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6d63df12-9875-46d5-841b-af0925f23aff",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -324,7 +314,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b69ccba2-bc1e-4c34-abd6-2fce89ff7c6e",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +345,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6011b4a4-89ed-40c0-a38b-a06758698372",
    "metadata": {},
    "source": [
     "### 尝试动态加权"
@@ -365,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "820e88e6-4a82-4ede-981f-1a7c147fa2e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +388,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "914a0768-3385-4642-beed-937acc2f4175",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -556,7 +542,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d144de84-17e9-4a32-abad-9e92328566fe",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +573,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf88283f-6d2f-4cec-bfd9-67bc74f01c88",
    "metadata": {},
    "source": [
     "### 到底哪些预测不准"
@@ -597,7 +581,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4607ef8a-a31b-4fc9-98fc-b7fa96ce24c9",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +611,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b63c6e88-16cd-4320-b9f2-22379c754da8",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +986,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb93c7da-4258-423b-8ed7-ab0bd8262a92",
    "metadata": {},
    "source": [
     "### 预测"
@@ -1013,7 +994,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "fdbae3fe-9beb-4972-b6ca-9ae6403126e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1006,6 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "c38e4385-5ef8-44fc-86eb-0469c0e3ab03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1030,6 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "53c5a143-153e-413b-8c40-4d44a703ec62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1043,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da0cc923-7440-4cd3-96dd-1b706a44cf45",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1073,7 +1050,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1087,7 +1064,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
